# worldmonitor-rebuild

./: Cargo.toml  Dockerfile  PROJECT_SUMMARY.md  README.md  docker-compose.yml  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  wrangler.toml
app/: layout.tsx  page.tsx
backend/: Cargo.toml
backend/src/: config.rs  main.rs
backend/src/agents/: analyst.rs  coordinator.rs  data_collector.rs  forecaster.rs  mod.rs  notifier.rs  validator.rs
backend/src/api/: agents.rs  alerts.rs  brief.rs  geo.rs  intelligence.rs  mod.rs  payments.rs  sync.rs  user.rs
backend/src/db/: mod.rs
backend/src/models/: mod.rs
backend/src/services/: cache.rs  llm.rs  mod.rs  payments.rs
components/dashboard/: AIInsightsPanel.tsx  ActivityFeed.tsx  AgentStatus.tsx  GlobalLiveFeed.tsx  ReasoningTrace.tsx  StatusBar.tsx  index.ts
components/map/: LayerControl.tsx  index.ts
components/ui/: Badge.tsx  Button.tsx  Card.tsx  CommandPalette.tsx  Input.tsx  MonetizationGate.tsx  StatusPulse.tsx  TimeAgo.tsx  index.ts
frontend/: next.config.js  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
hooks/: index.ts  useCommandPalette.ts  useWebSocket.ts
src/: main.rs
src/api/: alerts.rs  brief.rs  geo.rs  intelligence.rs  mod.rs  sync.rs  user.rs
src/cache/: mod.rs
src/core/: mod.rs
src/db/: mod.rs
src/models/: mod.rs
static/: app.js  index.html
styles/: globals.css
types/: index.ts
