[package]
name = "worldmonitor-core"
version = "0.1.0"
edition = "2021"
authors = ["WorldMonitor Team"]
description = "Lean, edge-native OSINT intelligence platform"
license = "MIT"

[dependencies]
# Web framework - Axum for standalone, worker for Cloudflare
tokio = { version = "1.35", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "fs", "compression"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client for external APIs
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# Database - SQLite with sqlx
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "migrate", "chrono"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
config = "0.14"
dotenvy = "0.15"

# Async utilities
futures = "0.3"
async-trait = "0.1"

# Caching (in-memory for standalone, compatible with Edge KV)
dashmap = "5.5"

# RSS parsing
rss = "2.0"

# HTML escaping
html-escape = "0.2"

# Regex for text processing
regex = "1.10"

# Compression
flate2 = "1.0"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"

[[bin]]
name = "worldmonitor"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
