[package]
name = "worldmonitor-agents"
version = "0.2.0"
edition = "2021"
authors = ["WorldMonitor Team"]
description = "Chain-of-Thought Multi-Agent Intelligence System"

[dependencies]
# Web framework
tokio = { version = "1.35", features = ["full"] }
axum = { version = "0.7", features = ["macros", "ws"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "fs", "compression"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls", "stream"], default-features = false }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "migrate", "chrono"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async
futures = "0.3"
async-trait = "0.1"
tokio-stream = "0.1"

# Caching
dashmap = "5.5"

# Regex
regex = "1.10"

# Text processing
html-escape = "0.2"

# Configuration
config = "0.14"
dotenvy = "0.15"

# Payment processing (Stripe)
stripe = { version = "0.26", optional = true }

# JWT
jsonwebtoken = "9.2"

# Password hashing
argon2 = "0.5"

# Rate limiting
governor = "0.2"

# WebSocket
axum-extra = { version = "0.9", features = ["typed-routing"] }

[features]
default = []
payments = ["stripe"]

[[bin]]
name = "worldmonitor-agents"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
